<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/border2"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/card_numberEditText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_height"
                android:layout_marginBottom="@dimen/border2"
                android:layout_marginTop="@dimen/border2"
                android:hint="@string/prompt_card_number"
                android:inputType="number" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/border2"
            android:orientation="horizontal"
            android:weightSum="1">

            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/card_yearEditText"
                    android:layout_width="170dp"
                    android:layout_height="@dimen/edit_text_height"
                    android:layout_weight="0.97"
                    android:hint="@string/prompt_year_card"
                    android:inputType="number"/>

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="61dp"
                android:layout_weight="0.61"
                android:gravity="center"
                android:text="/"
                android:textSize="@dimen/button_text_size2" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/card_monthEditText"
                    android:layout_width="170dp"
                    android:layout_height="@dimen/edit_text_height"
                    android:hint="@string/prompt_month_card"
                    android:inputType="number"/>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/security_codeEditText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_height"
                android:layout_marginBottom="@dimen/border2"
                android:hint="@string/prompt_security_code"
                android:inputType="number"/>

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/border2"
            android:orientation="horizontal"
            android:weightSum="1">

            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/first_nameEditText"
                    android:layout_width="170dp"
                    android:layout_height="@dimen/edit_text_height"
                    android:layout_weight="0.97"
                    android:hint="@string/prompt_first_name" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/last_nameEditText"
                    android:layout_width="170dp"
                    android:layout_height="@dimen/edit_text_height"
                    android:hint="@string/prompt_last_name" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <Button
            android:id="@+id/pay_nowButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginBottom="@dimen/border2"
            android:layout_marginLeft="@dimen/border2"
            android:layout_marginRight="@dimen/border2"
            android:layout_marginTop="@dimen/border2"
            android:background="@color/colorButton"
            android:text="@string/action_pay_now"
            android:textSize="@dimen/button_text_size2" />

    </LinearLayout>

</ScrollView>