<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/border2"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_height"
                android:layout_marginBottom="@dimen/border2"
                android:layout_marginTop="@dimen/border2"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_height"
                android:layout_marginBottom="@dimen/border2"
                android:hint="@string/prompt_password"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/addressEditText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_height"
                android:layout_marginBottom="@dimen/border2"
                android:hint="@string/prompt_address"
                android:inputType="textPostalAddress" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/border2"
            android:orientation="horizontal"
            android:weightSum="1">

            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/first_nameEditText"
                    android:layout_width="170dp"
                    android:layout_height="@dimen/edit_text_height"
                    android:layout_weight="0.97"
                    android:hint="@string/prompt_first_name" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/last_nameEditText"
                    android:layout_width="170dp"
                    android:layout_height="@dimen/edit_text_height"
                    android:hint="@string/prompt_last_name" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/store_nameEditText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_height"
                android:layout_marginBottom="@dimen/border2"
                android:hint="@string/store_name" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/mobile_phoneEditText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_height"
                android:layout_marginBottom="@dimen/border2"
                android:hint="@string/prompt_mobile_phone"
                android:inputType="phone" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="Measures (centimeter)"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/border2"
            android:orientation="horizontal"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Chest" />

                <EditText
                    android:id="@+id/chestEditText"
                    android:layout_width="170dp"
                    android:layout_height="@dimen/edit_text_height"
                    android:layout_weight="0.97"
                    android:gravity="center"
                    android:inputType="numberDecimal" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Hips" />

                <EditText
                    android:id="@+id/hipsEditText"
                    android:layout_width="170dp"
                    android:layout_height="@dimen/edit_text_height"
                    android:layout_weight="0.97"
                    android:gravity="center"
                    android:inputType="numberDecimal" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="Bank account information"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/border2"
            android:orientation="horizontal"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/prompt_account_nomber" />

                <EditText
                    android:id="@+id/accountEditText"
                    android:layout_width="110dp"
                    android:layout_height="@dimen/edit_text_height"
                    android:layout_weight="0.97"
                    android:gravity="center"
                    android:inputType="number" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/prompt_bank_nomber" />

                <EditText
                    android:id="@+id/bankEditText"
                    android:layout_width="110dp"
                    android:layout_height="@dimen/edit_text_height"
                    android:layout_weight="0.97"
                    android:gravity="center"
                    android:inputType="number" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Bank branch No." />

                <EditText
                    android:id="@+id/bank_branchEditText"
                    android:layout_width="120dp"
                    android:layout_height="@dimen/edit_text_height"
                    android:layout_weight="0.97"
                    android:gravity="center"
                    android:inputType="number" />

            </LinearLayout>

        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/sheeping_costEditText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_height"
                android:layout_marginBottom="@dimen/border2"
                android:hint="@string/shipping_cost"
                android:inputType="numberDecimal"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/sign_upButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginBottom="@dimen/border2"
            android:layout_marginLeft="@dimen/border2"
            android:layout_marginRight="@dimen/border2"
            android:layout_marginTop="@dimen/border2"
            android:background="@color/colorButton"
            android:text="@string/action_sign_up"
            android:textSize="@dimen/button_text_size2" />

    </LinearLayout>

</ScrollView>
