<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.natali.natalishopapp.DetailActivity"
    tools:showIn="@layout/activity_detail">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:id="@+id/codeLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/border"
                android:text="@string/code_no"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/codeText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="code number"
                android:textSize="12sp" />

        </LinearLayout>


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/image_size3"
            android:layout_height="@dimen/image_size3"
            android:layout_below="@+id/codeLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/border5"
            android:layout_marginTop="@dimen/border5" />

        <TextView
            android:id="@+id/nameText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView"
            android:layout_marginBottom="@dimen/border"
            android:gravity="center"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/button_text_size3" />

        <TextView
            android:id="@+id/priceText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nameText"
            android:gravity="center"
            android:textSize="@dimen/button_text_size" />

        <LinearLayout
            android:id="@+id/shipping_priceLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/priceText"
            android:layout_marginBottom="@dimen/border6"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/border"
                android:gravity="center_vertical"
                android:text="@string/shipping"
                android:textSize="@dimen/button_text_size2"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/shipping_priceText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/shipping_cost"
                android:textSize="16sp" />

        </LinearLayout>

        <!--<LinearLayout-->
            <!--android:id="@+id/colorLayout"-->
            <!--android:layout_width="fill_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_below="@+id/shipping_priceLayout"-->
            <!--android:layout_marginBottom="@dimen/border6"-->
            <!--android:gravity="center_vertical"-->
            <!--android:orientation="horizontal">-->

            <!--<TextView-->
                <!--android:id="@+id/textView"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginRight="@dimen/border2"-->
                <!--android:text="colors"-->
                <!--android:textSize="@dimen/button_text_size"-->
                <!--android:textStyle="italic" />-->

            <!--<Spinner-->
                <!--android:id="@+id/colorSpinner"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginEnd="45dp"-->
                <!--android:layout_marginRight="45dp" />-->

        <!--</LinearLayout>-->

        <Button
            android:id="@+id/buyButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_below="@+id/shipping_priceLayout"
            android:layout_margin="@dimen/border2"
            android:background="@color/colorButton"
            android:text="@string/buy_it_now"
            android:textSize="@dimen/button_text_size2" />

        <Button
            android:id="@+id/add_to_cartButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_below="@+id/buyButton"
            android:layout_marginBottom="@dimen/border6"
            android:layout_marginLeft="@dimen/border2"
            android:layout_marginRight="@dimen/border2"
            android:background="@color/colorButton2"
            android:text="@string/add_to_cart"
            android:textSize="@dimen/button_text_size2" />


        <ScrollView
            android:id="@+id/descriptionScroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/add_to_cartButton"
            android:layout_marginBottom="@dimen/border4"
            android:layout_marginTop="@dimen/border2">

            <TextView
                android:id="@+id/descriptionText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/button_text_size2" />

        </ScrollView>

        <TextView
            android:id="@+id/sellerTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/descriptionScroll"
            android:text="@string/seller"
            android:textSize="@dimen/button_text_size"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/sellerLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sellerTextView"
            android:layout_marginBottom="@dimen/border2"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/conect_ImageButton"
                android:layout_width="@dimen/icon_size2"
                android:layout_height="@dimen/icon_size2"
                android:src="@drawable/ic_action_email"
                android:layout_marginRight="@dimen/border2"/>

            <TextView
                android:id="@+id/sellerText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="seller"
                android:textSize="@dimen/button_text_size" />

        </LinearLayout>

    </RelativeLayout>

</ScrollView>
